--- a/PingPong/app/src/main/res/values/colors.xml
+++ b/PingPong/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background_home">#E91E63</color>
+    <color name="background_away">#FFEB3B</color>
+    <color name="input_text_color">#4CAF50</color>
+    <color name="input_text_color_hint">#9C27B0</color>
 </resources>
